[package]
name = "drop-for-symlink"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.9.3"
windows = { version = "0.48.0", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "implement",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
] }
